# sokoban

./: level2.txt  makeproject.sh  meson.build
levels/: level1.txt  level10.txt  level11.txt  level12.txt  level13.txt  level14.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
src/: Assign.c  Assign.h  Definitions.c  Definitions.h  Distance.c  Distance.h  Game.c  Game.h  Queue.c  Queue.h  main.c  meson.build  sokoban.c
